# snmp-sim-rust

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  build.rs  codecov.yml  codeowners  coverage_grcov.makefile.toml  docker-compose.yml  index.html  openapi.json  openapi.yaml  os-linux-std.txt  redeploy.sh  rustfmt.toml  snmp-sim.db  snmp-sim.db-shm  snmp-sim.db-wal  swagger.yaml
.cargo/: audit.toml  config
.github/workflows/: audit.yml  ci.yml  clippy-fmt.yml  linter.yml  update-swagger.yml
clients/rust/: Cargo.toml  README.md  build.rs
clients/rust/rust-client-snmp-sim-lib/: Cargo.toml  README.md
clients/rust/rust-client-snmp-sim-lib/.openapi-generator/: FILES
clients/rust/rust-client-snmp-sim-lib/docs/: AgentsApi.md  AgentsGet400Response.md  DevicesApi.md  RequestAgent.md  RequestDevice.md  RequestDeviceAgent.md  RequestDeviceSnmpProtocolAttributes.md  RequestDeviceSnmpProtocolAttributesSnmpV1.md  RequestDeviceSnmpProtocolAttributesSnmpV3.md  ResponseAgent.md  (+8 more)
clients/rust/src/: lib.rs
configuration/: base.yaml  local.yaml
crates/actix-async/: Cargo.toml  Makefile  README.md  rustfmt.toml
crates/actix-async-codegen/: Cargo.toml  README.md
crates/actix-async-codegen/src/: lib.rs
crates/actix-async/examples/: benchmark.rs  blocking.rs  closure.rs  concurrency.rs  supervisor.rs
crates/actix-async/src/: actor.rs  address.rs  context.rs  context_future.rs  error.rs  handler.rs  lib.rs  macros.rs  message.rs  request.rs  runtime.rs  waker.rs
crates/actix-async/src/supervisor/: error.rs  mod.rs  worker.rs
crates/actix-async/src/util/: async_oneshot.rs  futures.rs  mod.rs
crates/actix-async/src/util/async_channel/: listener.rs  mod.rs  unbounded.rs
crates/openapi-generator/: Cargo.toml
crates/openapi-generator/src/: find.rs  generator.rs  lib.rs
crates/paperclip-restful/: Cargo.toml  README.md
crates/paperclip-restful/src/: delete.rs  get.rs  lib.rs  no_schema.rs  post.rs  put.rs
crates/paperclip-restful/src/json_error/: error_type.rs  extractor_config.rs  mod.rs  spec_modifier.rs
crates/paperclip-restful/tests/: delete.rs  get.rs  post.rs  put.rs
crates/paperclip-restful/tests-ignore/: delete.rs  get.rs  put.rs
crates/rasn/: Cargo.toml
crates/rasn/benches/: criterion.rs
crates/rasn/macros/src/: config.rs  decode.rs  encode.rs  enum.rs  tag.rs
crates/rasn/src/: ber.rs  de.rs  enc.rs  lib.rs  types.rs
crates/rasn/src/ber/: de.rs  enc.rs  identifier.rs
crates/rasn/src/ber/de/: parser.rs
crates/rasn/src/types/: instance.rs  tag.rs
crates/rasn/standards/pkix/src/: attribute_certificate.rs  est.rs  lib.rs
crates/rasn/standards/pkix/tests/: digicert.rs
crates/rasn/standards/smi/src/: lib.rs  v1.rs
crates/rasn/standards/snmp/: Cargo.toml
crates/rasn/standards/snmp/src/: lib.rs  v1.rs  v2.rs  v3.rs
crates/rasn/tests/: explicit.rs  iec61850.rs  nested.rs  personnel.rs  set.rs
crates/shared-common/: .gitconfig  Cargo.toml  Makefile  README.md
crates/shared-common/.cargo/: config
crates/shared-common/src/: chain_formatter.rs  dyn_async.rs  generic_into.rs  lib.rs  saga_app_data.rs  security_scopes.rs  sort.rs  version_with_revision.rs
crates/snmp-data-parser/: Cargo.toml
crates/snmp-data-parser/src/: lib.rs  line.rs  property.rs
crates/snmp-data-parser/src/parser/: mod.rs
crates/snmp-data-parser/src/parser/snmp_data/: component.rs  mod.rs  modifier_extractor.rs  snmp_data_parser.rs  verax_modifier_extractor.rs
crates/snmp-data-parser/tests/: mod.rs
crates/snmp-data-parser/tests/resources/: line-os-linux-std.txt  parser-os-linux-std.txt  property-os-linux-std.txt
crates/telemetry/: Cargo.toml  rustfmt.toml
crates/telemetry/src/: lib.rs
docs/: openapi.json  rust_style.md  swagger.yaml
entity/: agents.rs  mod.rs  prelude.rs
migrations/: 20220406082849_agents.sql  20220426124730_add_agents_data.sql  20220428092134_managed_devices.sql  20220512092950_device_network_attributes.sql
snmp-sim-cli/: .env  Cargo.toml  README.md
snmp-sim-cli/src/: cli.rs  cli_commands.rs  cli_error.rs  command_handler.rs  main.rs
snmp-sim-cli/src/operations/: agent.rs  device.rs
snmp-sim-cli/src/sub_commands/: agent.rs  mod.rs
snmp-sim-cli/src/subcommands/: agent.rs  device.rs  mod.rs
src/: app.rs  configuration.rs  generate_spec.rs  lib.rs  main.rs  telemetry.rs
src/cli/: cli.rs  main.rs  mod.rs  write_config_error.rs
src/cli/operations/: config.rs
src/cli/subcommands/: config.rs
src/data_access/: mod.rs
src/data_access/entity/: agents.rs  managed_devices.rs  mod.rs  prelude.rs
src/data_access/helpers/: agents.rs  managed_devices.rs  mod.rs
src/domain/: domain_error.rs  mod.rs
src/domain/entity/: agents.rs  create_result.rs  managed_devices.rs  mod.rs  snmp_protocol_attributes.rs  update_result.rs
src/domain/helpers/: agents.rs  managed_devices.rs  mod.rs
src/domain/snmp_agent_engine/: agent_context.rs  command_responder.rs  mod.rs
src/routes/: mod.rs  swagger_ui.rs
src/routes/agents/: agent_error.rs  mod.rs  routes.rs
src/routes/managed_devices/: device_error.rs  mod.rs  routes.rs
src/settings/: app_settings.rs  database_settings.rs  mod.rs
src/snmp/: mod.rs
src/snmp/codec/: generic_snmp_message.rs  mod.rs  snmp_codec.rs  snmp_codec_error.rs
src/snmp/handlers/: mod.rs  snmp_generic_handler.rs  snmp_v1_handler.rs  snmp_v2_handler.rs  snmp_v3_handler.rs
src/udp_client/: client.rs  client_error.rs  mod.rs
src/udp_server/: mod.rs  udp_server_actor.rs  udp_server_delegate.rs  udp_server_error.rs  udp_server_provider.rs  udp_stream_handler.rs
tests/api/agents/: post_agents.rs
tests/snmp-sim-api-tests/: helpers.rs  main.rs  service_scope.rs  test_app.rs
tests/snmp-sim-api-tests/agents/: delete_agents_id.rs  get_agents.rs  get_agents_id.rs  mod.rs  post_agents.rs  put_agents_id.rs
tests/snmp-sim-api-tests/devices/: delete_device_id.rs  get_device.rs  get_device_id.rs  manage_device.rs  mod.rs  post_device.rs  put_device_id.rs  start_device_id.rs  stop_device_id.rs
tests/snmp-sim-api-tests/snmp/: mod.rs  snmp_v1.rs  snmp_v2.rs
(+33 files in other folders)
