[package]
name = "snmp-sim"
version = "0.1.0"
authors = ["Frank Horvath <fhorvath80@gmail.com>"]
description = "SNMP Simulator running as a service managed remotely through HTTP Rest API"
license = "Apache-2.0"
edition = "2021"
documentation = "https://github.com/sonalake/snmp-sim-rust"
homepage = "https://github.com/sonalake/snmp-sim-rust"
repository = "https://github.com/sonalake/snmp-sim-rust.git"
readme = "README.md"
keywords = ["snmp", "simulator"]
categories = ["command-line-utilities", "simulation", "simulation::snmp"]
default-run = "snmp_sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "snmp_sim"

[[bin]]
path = "src/bin/generate_spec.rs"
name = "generate_spec"

[dependencies]
actix-async = { path = "./crates/actix-async" }
shared-common = { path = "./crates/shared-common" }
telemetry = { path = "./crates/telemetry" }
paperclip-restful = { path = "./crates/paperclip-restful" }
snmp-data-parser = { path = "./crates/snmp-data-parser" }
rasn-snmp = { path = "./crates/rasn/standards/snmp" }
rasn-smi  = { path = "./crates/rasn/standards/smi" }
rasn  = { path = "./crates/rasn" }

actix = "0.13.0"
actix-web = { version = "4.0.1", default_features = false, features = [
  "macros",
] }
anyhow = "1.0.56"
bytes = "1.1.0"
config = { version = "0.13.0", default-features = false, features = ["yaml"] }
futures = "0.3.21"
futures-macro = "0.3.21"
num-traits = "0.2.14"
num-bigint = "0.4.3"
# rasn-snmp = "0.6.0"
# rasn-smi = "0.6.0"
# rasn = "0.6.1"
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = "3.0.1"
thiserror = "1.0.30"
tokio = "1.17.0"
tokio-util = { version = "0.7.1", features = ["codec", "net"] }
tracing-actix-web = "0.5.1"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
visibility = { version = "0.0.1", optional = true }
paperclip = { version = "0.7.0", features = [
  "actix4",
  "uuid",
  "v3",
  "swagger-ui",
] }
serde_json = "1.0.79"
uuid_dev = { version = "0.8", features = ["serde"], package = "uuid" }
sqlx = { version = "0.5", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "sqlite",
  "uuid",
  "chrono",
  "migrate",
  "offline",
] }
sea-orm = { version = "0.7", features = [
  "sqlx-sqlite",
  "runtime-actix-rustls",
  "macros",
  "with-uuid",
], default-features = false }
chrono = "0.4.19"
dirs = "4.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
futures-util = { version = "0.3.21", default-features = false, features = [
   "alloc",
] }

[dev-dependencies]
snmp-sim = { path = ".", features = ["integration-tests"] }
actix-rt = "2.7.0"
tokio = { version = "1.17", features = ["macros"] }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
claim = "0.5.0"
demonstrate = "0.4.5"
cancellation = "0.1"
lazy_static = "1.4"
static_init = "1.0"
ctor = "0.1.22"
signal-child = "1"

[features]
integration-tests = ["visibility"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace]
members = [
  "snmp-sim-cli",
  "crates/actix-async",
  "crates/actix-async-codegen",
  "crates/openapi-generator",
  "crates/shared-common",
  "crates/telemetry",
  "crates/paperclip-restful",
  "clients/rust",
  "crates/rasn",
  "crates/rasn/standards/smi",
  "crates/rasn/standards/snmp",
]

[patch.crates-io]
paperclip = { git = "https://github.com/sonalake/paperclip", branch = "master" }
# rasn = { path = "../rasn" }
# rasn-smi = { path = "../rasn/standards/smi" }
# rasn-snmp = { path = "../rasn/standards/snmp" }
