[package]
name = "snmp-sim-cli"
version = "0.1.0"
authors = ["Frank Horvath <fhorvath80@gmail.com>"]
description = "SNMP Simulator Management CLI"
keywords = ["snmp", "simulator", "cli"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.1", default-features = false, features = ["derive", "std"] }