[package]
name = "paperclip-restful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"

serde_json = "1"
serde = "1"
mime = "0.3"
futures = "0.3"

paperclip = { version = "0.7", features = ["actix4", "v3"] }

[dev-dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[patch.crates-io]
paperclip = { git = "https://github.com/sonalake/paperclip", branch = "master" }
