[package]
name = "snmp-data-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
derefable = "0.1"
regex = "1.5"
tracing = "0.1"
rasn  = { path = "../rasn" }

[features]
default = ["snmpdata"]
snmpdata = ["property"]
property = ["line"]
line = []
